--- a/Indication/nbproject/project.properties
+++ b/Indication/nbproject/project.properties
@@ -602,7 +602,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=com.outtatech.common.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
