--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
@@ -31,6 +29,8 @@ dist.jar=${dist.dir}/Indication.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=libs/hamcrest-core-1.3.jar
+file.reference.junit-4.11.jar=libs/junit-4.11.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -74,6 +74,7 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.libs.dir=libs
 test.src.dir=test
 =======
 annotation.processing.enabled=true
@@ -588,7 +589,9 @@ javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.11.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -620,5 +623,3 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
-
->>>>>>> FETCH_HEAD
