Adds new enums for cards

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /Indication/build/
 /Indication/Indication/nbproject/private/
 /Indication/dist/
+/clue/nbproject/private/
+/nbproject/private/
+/build/
