--- a/Indication/nbproject/project.properties
+++ b/Indication/nbproject/project.properties
@@ -46,7 +46,7 @@ javac.test.classpath=\
     ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=
+javadoc.additionalparam=-linksource
 javadoc.author=false
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
@@ -591,7 +591,7 @@ javac.test.classpath=\
     ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=
+javadoc.additionalparam=-linksource
 javadoc.author=false
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
@@ -606,7 +606,7 @@ main.class=com.outtatech.common.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
